    'Random Albums' within a genre.
11. Add action to reload random albums lists.
12. Re-layout grid items if refresh list.
13. Add padding to main icon, so that it looks better in macOS dock.
14. Fix favourite ID calculation - revert to pre 2.0.0 code.
15. Change dot to a dash for window title.
16. Add 'BBC Sounds' to search.
17. Fix showing audio menu for tracks of favourite albums.

2.0.2
-----
1. Fix drag'n'drop of homescreen items.
2. Don't allow favourites to be dropped if sorting is enabled.
3. Fix drag'n'drop of favourites.
4. Fix drag'n'drop on mobile.
5. Set light background for text files.
6. Refresh apps list if change player whilst listing apps.
7. Mark apps list as needing refreshing if change player whilst browsing in app.
8. Disable 'Toggle queue' button if now-playing is expanded or info is open.

2.0.1
-----
 1. Update translations.
 2. Fix search field in various lists (e.g. Qobuz, Spotty).
 3. Fix some icons in Spotty.
 4. Fix subtoolbar left-padding when window width 370px or less.
 5. Give hover-buttons a background in lists, otherwise text can show through.
 6. Darken background of 'Adwaita-Dark' theme so as to work-around Chrome
    changing certain colours if its force dark mode is enabled.
 7. Fix margins of back button when home button is visible.
 8. Check if window.localStorage is undefined, if so cannot use.
 9. Fix drag'n'drop of playlist track onto queue.
10. Highlight drop target.
11. Fix drag image when start drag on list image.
12. Fix list hover buttons for light themes.
13. Fix 'All songs' missing from artist actions.
14. Only show 'All songs' if artist has more than 1 album.
15. Fix usage of custom css.

2.0.0
-----
 1. Use custom vuetify build to trim out unused components.
 2. Add button to toggle queue visibility on desktop layout.
 3. Make cover-art in browse and queue views optional.
 4. Support 'Extras' section by using iframe.
 5. Place home button, if shown, to the right of the back button (matches
    browsers, etc.)