@@ -21,6 +21,7 @@
 15. Change dot to a dash for window title.
 16. Add 'BBC Sounds' to search.
 17. Fix showing audio menu for tracks of favourite albums.
+18. Support ratingslight plugin.
 
 2.0.2
 -----
